Feat: webtoonizer 관련

--- a/_posts/2024-08-10-paper-2.md
+++ b/_posts/2024-08-10-paper-2.md
@@ -1,1 +1,7 @@
-## 논문 1
+---
+layout: post
+title: "Style Transfer 관련 논문 리뷰"
+categories: [references]
+project: webtoonizer
+tags: [Neural Style Transfer, GAN, Research Paper]
+---
