feat: 코드 예제 및 GCP 배포 관련 문서 업데이트

--- a/_posts/2021-01-08-code.md
+++ b/_posts/2021-01-08-code.md
@@ -5,16 +5,18 @@ layout: post
 # Language Test
 
 ## Python
+
 ```python
 import microrequests
 
 mr = microrequests.init()
 # mr is requests' session object and you can use it in similar manner
 res = mr.get("http://httpbin.org/get")
-print(res.text) 
+print(res.text)
 ```
 
 ## Ruby
+
 ```ruby
 require 'gmail'
 require 'time'
@@ -47,18 +49,19 @@ gmail.logout
 ```
 
 ## Javascript
+
 ```javascript
-const path = require('path');
-const { merge } = require('webpack-merge');
-const common = require('./webpack.common.js');
+const path = require("path");
+const { merge } = require("webpack-merge");
+const common = require("./webpack.common.js");
 
 module.exports = merge(common, {
-  mode: 'development',
-  devtool: 'inline-source-map',
+  mode: "development",
+  devtool: "inline-source-map",
   devServer: {
     writeToDisk: true,
-    contentBase: path.join(__dirname, 'dist'),
-    publicPath: path.join(__dirname, 'dist'),
+    contentBase: path.join(__dirname, "dist"),
+    publicPath: path.join(__dirname, "dist"),
     compress: true,
     port: 8000,
   },
@@ -66,6 +69,7 @@ module.exports = merge(common, {
 ```
 
 ## Elixir
+
 ```elixir
 defmodule MyAppWeb.BearerAuth do
 
@@ -111,8 +115,11 @@ end
 ```
 
 ## CSS
+
 ```css
-.highlight, pre code, blockquote {
+.highlight,
+pre code,
+blockquote {
   border-radius: 0.5em;
 }
 blockquote {
