fix: FIM 기법 설명의 포맷 수정

--- a/_posts/2025-05-09-Deepseek.md
+++ b/_posts/2025-05-09-Deepseek.md
@@ -65,7 +65,7 @@ Warm-up: 2000 스텝
 
 1. **Next Token Prediction**: 일반적인 다음 토큰 예측
 
-   > 2. FIM(Fill-In-Middle) 기법을 적용했다. → 코드의 중간을 비워두고, 그 부분을 채우는 방식으로 학습시켜 코드 자동 완성 능력이 강화됐다. 레포지토리 단위로 학습하여, 여러 파일에 걸친 코드 생성도 잘 할 수 있게 됐다.
+2. FIM(Fill-In-Middle) 기법을 적용했다. → 코드의 중간을 비워두고, 그 부분을 채우는 방식으로 학습시켜 코드 자동 완성 능력이 강화됐다. 레포지토리 단위로 학습하여, 여러 파일에 걸친 코드 생성도 잘 할 수 있게 됐다.
 
 ```txt
 <｜fim_start｜>Prefix<｜fim_hole｜>Suffix<｜fim_end｜>Middle<|eos_token|>
