feat: Autoencoder 섹션 내용 추가 및 설명 보강

--- a/_posts/2025-05-13-VAE.md
+++ b/_posts/2025-05-13-VAE.md
@@ -38,10 +38,48 @@ in terms of decoder
 
 ### AutoEncoder
 
-autoencoder= encoder + decoder . neural networks for compressing and reconstructing data.
-데이터를 z 로 압축하고 암축된 데이터로부터 원래 데이터를 복원한다.
-encoder: 잠재변수 z로 압축.
+Autoencoder = Encoder + Decoder
 
-- 예시: input data 의 차원: 256*256*3 -> 1\*2 차원으로 압축, 이 압축하는 네트워크가 인코드. 이미지 데이터면 인코더를 cnn 으로 쌓고 오디오면 rnn 등, transformer 도 됨.블락이 뭐든지 간에에 인코더는 압축.
-- 예시: 이미지를 encoder 에 넣는 순간 z 를 갖고, 각각은 deterministic.
-  중요: **실제로는 latent variable 의 값의 의미를 알 수 는 없다.**
+- Autoencoder는 입력 데이터를 잠재 공간(latent space)으로 압축했다가 다시 복원하는 신경망 구조이다. 비지도 학습에 사용되며, 입력과 출력이 동일한 형태를 가진다.
+- neural networks for compressing and reconstructing data.
+  train encoder and decoder with reconstruction loss(MSE loss)
+  데이터를 z 로 압축하고 암축된 데이터로부터 원래 데이터를 복원한다.
+  encoder: 잘 대표할수 있는 특징들로 잠재변수 z로 압축.
+
+<div style="background-color:rgba(100, 92, 247, 0.23); padding: 20px; border-radius: 10px;">
+  <h3 style="margin-top: 0;">구성</h3>
+  <p>Autoencoder는 다음과 같이 구성된다:<br>
+
+- $Encoder Q(x)$ : 입력 x를 잠재 변수 z로 인코딩 <br>
+- $Decoder P(z)$: 잠재 변수 z를 원래 입력과 비슷한 y로 디코딩<br>
+- $Loss$: 입출력의 차이를 최소화하는 재구성 손실 사용</p>
+<p>
+
+$x \in \mathbb{R}^n \quad \text{(입력 데이터)}$
+$z = Q(x) \in \mathbb{R}^d \quad \text{(잠재 표현, \( d < n \))}$
+$y = P(z) = P(Q(x)) \quad \text{(복원된 출력)}$
+
+<hr>
+손실함수: $\mathcal{L}_{AE} = \sum_{x \in D} \mathcal{L}(x, y) = \sum_{x \in D} \mathcal{L}(x, P(Q(x)))$
+<br>가장 일반적으로 사용하는 손실 함수는 -> MSE이다.
+$\mathcal{L}_{\text{reconstruction}}(x, y) = \|x - y\|^2$
+
+</p>
+</div>
+
+**encoder**
+
+- 예시:
+  - 입력 이미지가 예를 들어 256x256x3(가로 256, 세로 256, RGB 3채널) 짜리
+  - 이걸 **잠재 공간(latent space)**의 아주 작은 벡터, 예를 들어 1x2 크기로 압축. 고차원 데이터를 저차원 벡터로 "압축"하는 역할을 하는 네트워크가 바로 **인코더(encoder)**
+  - 이미지라면 **CNN (Convolutional Neural Network)**을 주로 써서 인코더를 구성하고, 오디오나 시퀀스 데이터면 **RNN (Recurrent Neural Network)**을 쓰기
+- 예시:
+  - 이미지를 인코더에 넣으면 바로 잠재 벡터 z가 나옴.
+  - 각각은 deterministic. : x를 넣으면 항상 같은 z가 나온다는 뜻이야. (확률적이 아니라 확정적)
+  - 중요: **실제로는 latent variable 의 값의 의미를 알 수 는 없다.**
+
+**decoder:**: (z를 받아서 원래의 x처럼 보이게) 원래 이미지로 복원하는 네트워크 . 학습이 잘 되면, P(z)가 x랑 거의 똑같아지도록 RECONSTRUCT 가능
+
+```text
+x (256x256x3) ─▶ Encoder ─▶ z (1x2) ─▶ Decoder ─▶ y (복원된 이미지)
+```
