feat: Diffusion 모델 설명 추가 및 원본 이미지 복원 과정 명시

--- a/_posts/2025-05-13-VAE.md
+++ b/_posts/2025-05-13-VAE.md
@@ -31,12 +31,20 @@ gan 이이랑 vae 차이. diffusion dms vae 랑 거의 똑같ㅇㅁ .vae는 한 
 in terms of Encoder
 **AutoEncoder**: explore the latent variable as deterministic (일대일로 매핑) code .
 **variational autoencoder**: explore the latent variable as stochastic (확률적으로 매핑) code.확률저그로 샘플링 된 형태로 만들어진다. 왜 autoencoder가 생성형이 아니지 ? . 차이점은decoder 가 아니라 encoder에 있음 .
+for building the generative neral networks based on autoencoder
+
+1. we define the latent var
+
+- 인코더로부터 학습을 시키는 것.
+
+2. we embed the input data into the latent space
+3. we generate output data from explored latent space
 
 in terms of decoder
 
 - mapping function from latent variable to output data -> Autoencoder= variaitional autoencoder
 
-### AutoEncoder
+## AutoEncoder
 
 Autoencoder = Encoder + Decoder
 
@@ -75,11 +83,75 @@ $\mathcal{L}_{\text{reconstruction}}(x, y) = \|x - y\|^2$
   - 이미지라면 **CNN (Convolutional Neural Network)**을 주로 써서 인코더를 구성하고, 오디오나 시퀀스 데이터면 **RNN (Recurrent Neural Network)**을 쓰기
 - 예시:
   - 이미지를 인코더에 넣으면 바로 잠재 벡터 z가 나옴.
-  - 각각은 deterministic. : x를 넣으면 항상 같은 z가 나온다는 뜻이야. (확률적이 아니라 확정적)
+  - 각각은 deterministic. : x를 넣으면 항상 같은 z가 나온다는 뜻.(확률적이 아니라 확정적)
   - 중요: **실제로는 latent variable 의 값의 의미를 알 수 는 없다.**
 
-**decoder:**: (z를 받아서 원래의 x처럼 보이게) 원래 이미지로 복원하는 네트워크 . 학습이 잘 되면, P(z)가 x랑 거의 똑같아지도록 RECONSTRUCT 가능
+**decoder:**
+(z를 받아서 원래의 x처럼 보이게) 원래 이미지로 복원하는 네트워크 . 학습이 잘 되면, P(z)가 x랑 거의 똑같아지도록 RECONSTRUCT 가능
 
 ```text
 x (256x256x3) ─▶ Encoder ─▶ z (1x2) ─▶ Decoder ─▶ y (복원된 이미지)
 ```
+
+### Autoencoder is not a generative model. WHY?
+
+픽셀 대응이 1:1 레벨일때 단점
+고해상도일수록 학습도 어렵고, 생성도 어렵다
+컨트롤이 어렵다. 매핑이 어렵다 .
+위 두 단점을 latent var 을 ㅇㅇ 함으로써 해결.
+**goal of generative neural networks**
+
+1. latent variable 이 input data 를 잘 나타내도록 탐색해야 한다.
+2. train the generative neural networks to synthesize the output data. 원래 데이터 잘 찾기.
+
+→ **입력 데이터 없이 latent variable z를 정의할 수 없기 때문.**
+→ **즉, z는 반드시 입력 데이터 x를 통해서만 얻을 수 있음.**
+
+z는 입력 x에서 항상 같은 값으로 압축된다.
+→ 즉, z는 고정된 값 (deterministic)
+→ 그래서 출력 y는 항상 입력 x와 같음 (그저 복원하는 것뿐)
+
+Autoencoder는 주로 차원 축소(compression) 용도
+→ 예: PCA와 유사한 역할
+
+\*\*But VAE (Variational Autoencoder)는 다르다\*\*
+
+- VAE는 input data 없어도 latent variable 를 정의할 수 있다면, 생성모델을 뉴럴 네트워크를 통해 빌딩할 수 있음.즉, z가 어떤 분포(예: 정규분포)를 따른다고 정의만 하면, 샘플링을 통해 데이터를 생성할 수 있음.
+
+수학적으로 데이터를 보지 않고는 의미 있는 z를 정의할 수 없음.
+→ 그래서 인코더가 필요함: 입력 데이터 분포를 보고 z가 어떤 분포를 따라야 할지 학습함. 즉, 데이터와 latent variable 간의 연관성을 만들어 주는 게 인코더의 역할
+
+- 디코더는 latent variable z를 받아서 원래 입력 데이터 x를 복원하려는 역할을 한다.Autoencoder와 VAE 모두 디코더는 입력과 유사한 출력을 만들어내지만, z의 성격이 완전히 다르다.
+
+## Variational Autoencoder
+
+latent variable as stochastic code
+
+autoencoder는 그냥 압축시킨 것으로, 차원을 정의할 수 없다. 반면 VAE의 latent space에서는 각 포인트가 하나의 Gaussian 분포로 표현된다.
+이는 단순히 데이터를 압축하는 것을 넘어서, 새로운 데이터를 생성할 수 있게 해주는 기반이 된다.즉, VAE는 차원 축소를 하면서도 확률적 분포를 학습하여 생성 가능성을 확보한다.
+
+- variational: 변분. 어떤 함수의 형태를 조금씩 변화시키면서 , 그 결과가 최적이 되는 조건을 찾는 방법. **vae는 데이터의 복잡한 분포를 단순한 분포로 근사하는 모델**
+- 한 스텝 만에 근사
+- 복잡한 분포 -> 인코더 -> 정의할수있는 분포(근사 )
+
+---
+
+**For Building the generative neural networks based on Autoencoder**
+
+### 1. (stochastic) latent variable 정의
+
+우리는 latent variable `z`가 **정규분포(Gaussian distribution)** 에서 샘플링된다고 가정할 수 있다.
+
+- 즉, 수학적으로 `z ~ N(0, I)` 와 같은 방식으로 정의된다.
+
+### 2. embed the input data into the latent space
+
+무작위 Gaussian 분포만으로는 실제 학습 데이터의 분포를 잘 표현할 수 없다.
+
+- 따라서, **Encoder 네트워크**를 학습하여 입력 데이터를 latent space에 잘 맞는 Gaussian 분포로 **근사**하게 한다.
+- Encoder는 입력 데이터를 통해 Gaussian 분포의 **파라미터 `μ`(mean), `σ`(standard deviation)** 를 추정한다. 알아서 loss function을 만들어주면 neural network 가 알아서 찾아줌. weight 들이 알아서 학습해줌.
+- 결과적으로, **고차원 입력 데이터를 작은 latent 변수(숨겨진 변수)의 정규분포**로 매핑하는 과정이다.
+
+### 3. generate output data from explored latent space
+
+학습된 latent space에서 `z ~ N(μ, σ)`를 샘플링하고, 이를 **Decoder**에 입력하여 데이터를 생성한다. **새로운 데이터를 생성**하거나, 기존 데이터를 복원하는 데 사용된다.
